--- a/templates/ML/newIndex.html
+++ b/templates/ML/newIndex.html
@@ -382,7 +382,7 @@
             </div>
             <div class="logoCaretContainer">
               <div class="more">
-                <img class="logoCaret" src="/Applications/XAMPP/xamppfiles/htdocs/devDocs/templates/ML/dist/assets/svg/carat717771.png" alt="caret"/>
+                <image class="logoCaret" src="/Applications/XAMPP/xamppfiles/htdocs/devDocs/templates/ML/dist/assets/svg/carat717771.png" alt="caret"/>
               </div>
             </div>
           </div>
@@ -532,6 +532,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="dist/js/lightgallery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="dist/js/lg-thumbnail.min.js"></script>
