--- a/templates/ML/index.html
+++ b/templates/ML/index.html
@@ -25,7 +25,7 @@
       <div class="mainBar">
         <div id="topInfo" class="col-md-12">
           <div id="topInfoContainer">
-            <span id="topMiners">THE MINER'S LAMP AWARD</span><img class="lazyload" id="topLogo" data-size="auto" data-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkEC+vBwABvAEP2J2F2AAAAABJRU5ErkJggg==" data-srcset="dist/assets/images/one/MLLogo_80.jpg 700w, dist/assets/images/one/MLLogo_100.jpg 1000w" alt="topLogo" />
+            <span id="topMiners">THE MINER'S LAMP AWARD</span><img class="lazyload" id="topLogo" data-size="auto" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkEC+vBwABvAEP2J2F2AAAAABJRU5ErkJggg==" data-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkEC+vBwABvAEP2J2F2AAAAABJRU5ErkJggg==" data-srcset="dist/assets/images/one/MLLogo_80.jpg 700w, dist/assets/images/one/MLLogo_100.jpg 1000w" alt="topLogo" />
             <a id="topDonateBtn" href="#sectionThreeContainer" type="button">Donate</a>
             <span id="hamburger"><img class="icon icons8-Menu lazyload" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkEC+vBwABvAEP2J2F2AAAAABJRU5ErkJggg==" data-src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAp0lEQVRoQ+2XwQnAMAwD45Hz6vgtdAQJgRHXv0R850A6p+SbkjkOg2wziRGMhAiwWiGwcu3c575yelGwZ5BFUK2jcNktfIEwRgJQrUqMWPgCYYwEoFqVGLHwBcIYCUC1KntevzX/I5bPRWEu+yIZ/1EwgpEQAVYrBFauxYiMLhTESAisXNtjpOb1WzOIvJTLgj13ZBlY+TgYkdGFghgJgZVrMSKjCwU/hkwOQyzomKcAAAAASUVORK5CYII="></span>
           </div>
@@ -517,7 +517,9 @@
   </div><!--container-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js" async></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" async></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="dist/js/picturefill.min.js"></script>
+    <script src="dist/js/modernizr-custom.js"></script>
     <script src="dist/js/lightgallery.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js" defer></script>
     <script src="dist/js/lg-thumbnail.min.js" defer></script>
