--- a/templates/ML/index.html
+++ b/templates/ML/index.html
@@ -516,19 +516,19 @@
     </div>
   </div><!--container-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js" async></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="dist/js/picturefill.min.js"></script>
     <script src="dist/js/modernizr-custom.js"></script>
-    <script src="dist/js/lightgallery.min.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js" defer></script>
-    <script src="dist/js/lg-thumbnail.min.js" defer></script>
-    <script src="dist/js/lg-fullscreen.min.js" defer></script>
-    <script src="dist/js/lg-share.min.js" defer></script>
-    <script src="dist/js/lg-zoom.min.js" defer></script>
-    <script src="dist/js/owl.carousel.min.js" defer></script>
-    <script src="dist/js/lity.min.js" defer></script>
-    <script src="dist/js/lazySizes.min.js" async></script>
+    <script src="dist/js/lightgallery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+    <script src="dist/js/lg-thumbnail.min.js"></script>
+    <script src="dist/js/lg-fullscreen.min.js"></script>
+    <script src="dist/js/lg-share.min.js"></script>
+    <script src="dist/js/lg-zoom.min.js"></script>
+    <script src="dist/js/owl.carousel.min.js"></script>
+    <script src="dist/js/lity.min.js"></script>
+    <script src="dist/js/lazySizes.min.js"></script>
     <script src="dist/js/index.min.js"></script>
   </body>
 
