--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                     <a href="#" class="list-group-item list-group-item-action disabled">Responsive Templates</a>
                     <a href="OwlCarousel2-2.2.1/index.html" class="list-group-item list-group-item-action disabled">Owl Carousel</a>
                     <a href="lity-2.3.0/index.html" class="list-group-item list-group-item-action disabled">Lity Lightbox</a>
-                    <a href="shifterMenu/index.html" class="list-group-item list-group-item-action disabled">Shifter Menu</a>
+                    <a href="ML/index.html" class="list-group-item list-group-item-action disabled">ML</a>
                 </div>
             </div>
         </div>
