--- a/templates/shifterMenu/formstone/src/css/navigation.css
+++ b/templates/shifterMenu/formstone/src/css/navigation.css
@@ -5,8 +5,8 @@ button {
 
 .fs-navigation-overlay-nav.fs-navigation-enabled {
     width: 270px;
-    height: 100%;
-    height: calc(100% + 60px);
+  /*  height: 100%;
+    height: calc(100% + 60px);*/
     position: fixed;
     top: 0;
     background: #fff;
@@ -75,11 +75,10 @@ button {
     overflow: hidden!important;
 }
 .fs-light.fs-navigation-enabled {
-    margin: 0;
+    /*margin: 0;*/
 }
 .fs-light.fs-navigation-overlay-nav.fs-navigation-enabled {
-    background: #ECEFF1;
-    padding: 20px;
+    background: #ededed; /*dark 717771, blue 00779e*/
 }
 .fs-light.fs-navigation-overlay-nav.fs-navigation-animated {
     -webkit-transition: box-shadow 1ms linear .2s, visibility 1ms linear .2s, -webkit-transform .2s ease;
@@ -120,7 +119,7 @@ button {
     height: 40px;
     line-height: 40px;
     margin: 0;
-    padding: 0 45px 0 15px;
+    padding: 0 45px 0 0px;
     position: relative;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -147,8 +146,8 @@ button {
     top: 0;
     right: 15px;
     bottom: 0;
-    background: #607D8B;
-    box-shadow: 0 5px 0 #607D8B, 0 -5px 0 #607D8B;
+    background: #717771;
+    box-shadow: 0 5px 0 #717771, 0 -5px 0 #717771;
     content: '';
     display: block;
     margin: auto 0;
@@ -159,7 +158,7 @@ button {
     background: 0 0;
     border: none;
     box-shadow: none;
-    color: #607D8B;
+    color: #717771;
     content: "\00d7";
     font-size: 22px;
     font-weight: 700;
@@ -170,8 +169,8 @@ button {
 
 .fs-navigation-overlay-nav.fs-navigation-enabled {
     width: 270px;
-    height: 100%;
-    height: calc(100% + 60px);
+    /*height: 100%;
+    height: calc(100% + 60px);*/
     position: fixed;
     top: 0;
     background: #fff;
