--- a/templates/chess/index.html
+++ b/templates/chess/index.html
@@ -21,6 +21,14 @@
           </div>
         </div>
         <div class="col-md-12">
+          <div class="buttonPanel">
+            <input type="radio" name="moveType" value="free" checked> free
+            <input type="radio" name="moveType" value="snap"> snap
+            <input type="radio" name="moveType" value="legal"> legal
+          </div>
+
+        </div>
+        <div class="col-md-12">
           <div class="test">
 
           </div>
